[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/title/title.gd" type="Script" id=1]
[ext_resource path="res://assets/background_menu.png" type="Texture" id=2]
[ext_resource path="res://screens/main/Main.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/title/main_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/how_to_play.png" type="Texture" id=5]
[ext_resource path="res://screens/title/button_styleboxflat.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.176471, 0.227451, 1 )

[node name="title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
margin_left = 1216.0
margin_top = 832.0
margin_right = 1392.0
margin_bottom = 926.0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
text = " START "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HowToPlayButton" type="Button" parent="."]
margin_left = 1472.0
margin_top = 832.0
margin_right = 1834.0
margin_bottom = 926.0
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
text = " HOW TO PLAY "

[node name="HowToPlay" type="TextureRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 5 )

[node name="BackButton" type="Button" parent="HowToPlay"]
margin_left = 128.0
margin_top = 128.0
margin_right = 317.0
margin_bottom = 222.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = " BACK "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="HowToPlayButton" to="." method="_on_HowToPlayButton_pressed"]
[connection signal="pressed" from="HowToPlay/BackButton" to="." method="_on_BackButton_pressed"]
